--- a/UwpBridgeTest/WpfApp/WpfApp.csproj
+++ b/UwpBridgeTest/WpfApp/WpfApp.csproj
@@ -7,4 +7,8 @@
     <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <DefineConstants>TRACE;_WPF_</DefineConstants>
+  </PropertyGroup>
+
 </Project>
